--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,11 +66,11 @@ a{
 }
 .offerWrapper{
     background: linear-gradient(-1.5deg, #292929 3%, rgba(0, 0, 0, 0) 3.1%);
-    padding: 10% 25% 10% 25%;
+    padding: 5% 25% 5% 25%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(5,1fr);
-    grid-gap: 3vmax;
+    grid-gap: 5vmax;
     .offerTitle{
         grid-column-start: 1;
         grid-column-end: 4;
@@ -82,19 +82,22 @@ a{
         }
     }
     .offerBox{
-        background-color: pink;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: space-between;
         .offerBoxIcon{
             width: 5vmax;
             height: 5vmax;
-            background-color: darkorange;
+            img{
+                width: 100%;
+                height: 100%;
+            }
         }
         .offerBoxTitle h3{
             font-weight: 400;
             font-size: 1.1vmax;
-            padding: 3vmax 10% 2vmax 10%;
+            padding: 3vmax 5% 2vmax 5%;
             text-align: center;
         }
         .offerBoxBar{
@@ -105,7 +108,6 @@ a{
         }
     }
     .offerMore{
-        background-color: darkmagenta;
         grid-column-start: 1;
         grid-column-end: 4;
         display: flex;
@@ -115,7 +117,7 @@ a{
         padding: 1vmax 15% 1vmax 15%;
         h2{
             font-weight: 400;
-            font-size: 1.7vmax;
+            font-size: 2vmax;
             text-align: center;
         }
     }
@@ -185,16 +187,16 @@ a{
         }
     }
     .reviewDots{
-        width: 10%;
+        width: 4%;
         height: 2vmax;
-        background-color: yellowgreen;
         display: flex;
         align-items: center;
         justify-content: space-around;
         .dot{
-            width: 2vmax;
-            height: 2vmax;
-            background-color: violet;
+            width: 0.6vmax;
+            height: 0.6vmax;
+            border-radius: 50%;
+            background-color: white;
         }
     }
 }
@@ -253,11 +255,40 @@ a{
         padding: 2vmax 1vmax;
     }
     .contactSocials{
-        background-color: deepskyblue;
         grid-column-start: 4;
         grid-column-end: 5;
         grid-row-start: 3;
         grid-row-end: 4;
+        display: flex;
+        flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+        .socialsContainer{
+            width: 60%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            .social{
+                width: 2.5vmax;
+                height: 2.5vmax;
+                background-color: whitesmoke;
+                background-position: center;
+                background-size: cover;
+            }
+            .Facebook{
+                background-image: url(../assets/icons/facebook.png);
+            }
+            .Instagram{
+                background-image: url(../assets/icons/instagram.png);
+            }
+            .Youtube{
+                background-image: url(../assets/icons/youtube.png);
+            }
+        }
     }
-
+}
+.footer{
+    width: 100%;
+    height: 3vmax;
+    background-color: $maincolor;
 }
