--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,7 +62,20 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 5% 5% 10% 5%;
+    padding: 4% 5% 8% 5%;
+    .counterBox{
+        text-align: center;
+        .counter{
+            font-size: 1.8vmax; 
+            padding-bottom: 1vmax;   
+            color: #9c88ff; 
+            font-weight: 500;       
+        }
+        h3{
+            font-weight: 400;
+            font-size: 1.4vmax;
+        }
+    } 
 }
 .offerWrapper{
     background: linear-gradient(-1.5deg, #292929 3%, rgba(0, 0, 0, 0) 3.1%);
@@ -155,10 +168,20 @@ a{
         display: flex;
         align-items: center;
         justify-content: space-around;
+        
         .arrow{
-            width: 4vmax;
-            height: 4vmax;
-            background-color: tomato;
+            width: 3vmax;
+            height: 3vmax;
+            cursor: pointer;
+            img{
+                width: 100%;
+                height: 100%;
+                
+            }
+        }
+        .a1{
+            transform: rotate(180deg);
+            opacity: 0;
         }
         .reviewSection{
             width: 60%;
@@ -186,17 +209,34 @@ a{
             }
         }
     }
+    .reviewPos1{
+        transform: none;
+        transition: 0.7s linear;
+    }
+    .reviewPos2{
+        transform: translateX(-100%);
+        transition: 0.7s linear;
+    }
+    .reviewPos3{
+        transform: translateX(-200%);
+        transition: 0.7s linear;
+    }
     .reviewDots{
         width: 4%;
         height: 2vmax;
         display: flex;
         align-items: center;
         justify-content: space-around;
-        .dot{
-            width: 0.6vmax;
-            height: 0.6vmax;
+        .dot1,
+        .dot2,
+        .dot3{
+            width: 0.8vmax;
+            height: 0.8vmax;
             border-radius: 50%;
-            background-color: white;
+            background-color: white;   
+        }
+        .active{
+            background-color: #9c88ff;
         }
     }
 }
