--- a/scss/style.css
+++ b/scss/style.css
@@ -67,6 +67,35 @@ a {
   background-color: blanchedalmond;
 }
 
+.mainWrapper .goUp {
+  position: fixed;
+  top: 85%;
+  right: 3vmax;
+  width: 3vmax;
+  height: 3vmax;
+  border-radius: 50%;
+  background-color: #9c88ff;
+  -webkit-box-shadow: 4px 4px 12px 0px black;
+  box-shadow: 4px 4px 12px 0px black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+
+.mainWrapper .goUp img {
+  width: 40%;
+  height: 40%;
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+}
+
 .counterWrapper {
   width: 100%;
   background: linear-gradient(-2deg, #9c88ff 22%, rgba(0, 0, 0, 0) 22.3%);
