--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,4 @@
+@import url(./menu.css);
 * {
   margin: 0;
   padding: 0;
@@ -42,7 +43,6 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: bisque;
 }
 
 .mainWrapper h1 {
