--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,9 +50,26 @@ a{
         line-height: 1.7vmax;
     }
     .mainWrapperButton{
-        width: 20vmax;
+        width: 15vmax;
         height: 3vmax;
-        background-color: blanchedalmond;
+        border-radius: 10px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        transition: 150ms ease-in;
+        cursor: pointer;
+        h3 {
+            font-weight: 500;
+            font-size: 1.3vmax;
+        }
+        img{
+            width: 1.8vmax;
+        }
+    }
+    .mainWrapperButton:hover{
+        color: white;
+        background-color: #9c88ff;
     }
     .goUp{       
         position: fixed;
