--- a/scss/style.css
+++ b/scss/style.css
@@ -37,6 +37,16 @@ a {
   padding-left: 15%;
 }
 
+@media screen and (orientation: portrait) {
+  .mainWrapper {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 0;
+    text-align: center;
+  }
+}
+
 .mainWrapper .topBar {
   width: 100%;
   height: 5vmax;
@@ -52,6 +62,13 @@ a {
   line-height: 6vmax;
 }
 
+@media screen and (orientation: portrait) {
+  .mainWrapper h1 {
+    font-size: 6.5vmax;
+    line-height: 7vmax;
+  }
+}
+
 .mainWrapper h2 {
   width: 38%;
   color: white;
@@ -61,10 +78,19 @@ a {
   line-height: 1.7vmax;
 }
 
+@media screen and (orientation: portrait) {
+  .mainWrapper h2 {
+    width: 60%;
+    margin-top: -6%;
+    font-size: 2vmax;
+    line-height: 2.4vmax;
+  }
+}
+
 .mainWrapper .mainWrapperButton {
   width: 15vmax;
   height: 3vmax;
-  border-radius: 10px;
+  border-radius: 30px;
   background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -79,18 +105,49 @@ a {
   cursor: pointer;
 }
 
+@media screen and (orientation: portrait) {
+  .mainWrapper .mainWrapperButton {
+    width: 40%;
+    height: 5vmax;
+  }
+}
+
 .mainWrapper .mainWrapperButton h3 {
   font-weight: 500;
   font-size: 1.3vmax;
 }
 
-.mainWrapper .mainWrapperButton img {
+@media screen and (orientation: portrait) {
+  .mainWrapper .mainWrapperButton h3 {
+    font-size: 2vmax;
+  }
+}
+
+.mainWrapper .mainWrapperButton .buttonIcon {
   width: 1.8vmax;
+  height: 1.8vmax;
+  background-image: url(../assets/icons/arrow3.png);
+  background-position: center;
+  background-size: cover;
+  -webkit-transition: 150ms ease-in;
+  transition: 150ms ease-in;
+}
+
+@media screen and (orientation: portrait) {
+  .mainWrapper .mainWrapperButton .buttonIcon {
+    width: 2.1vmax;
+    height: 2.1vmax;
+  }
 }
 
 .mainWrapper .mainWrapperButton:hover {
   color: white;
   background-color: #9c88ff;
+}
+
+.mainWrapper .mainWrapperButton:hover .buttonIcon {
+  background-image: url(../assets/icons/arrow4.png);
+  margin-left: 10%;
 }
 
 .mainWrapper .goUp {
@@ -115,11 +172,24 @@ a {
   cursor: pointer;
 }
 
+@media screen and (orientation: portrait) {
+  .mainWrapper .goUp {
+    right: 3vmax;
+    width: 5vmax;
+    height: 5vmax;
+  }
+}
+
 .mainWrapper .goUp img {
   width: 40%;
   height: 40%;
   -webkit-transform: rotate(270deg);
           transform: rotate(270deg);
+}
+
+.mainWrapper .goUp:hover {
+  width: 3.5vmax;
+  height: 3.5vmax;
 }
 
 .counterWrapper {
@@ -136,6 +206,19 @@ a {
   padding: 4% 5% 8% 5%;
 }
 
+@media screen and (orientation: portrait) {
+  .counterWrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    grid-gap: 5vmax;
+    padding: 4% 5% 15% 5%;
+  }
+}
+
 .counterWrapper .counterBox {
   text-align: center;
 }
@@ -147,21 +230,39 @@ a {
   font-weight: 500;
 }
 
+@media screen and (orientation: portrait) {
+  .counterWrapper .counterBox .counter {
+    font-size: 3vmax;
+  }
+}
+
 .counterWrapper .counterBox h3 {
   font-weight: 400;
   font-size: 1.4vmax;
 }
 
+@media screen and (orientation: portrait) {
+  .counterWrapper .counterBox h3 {
+    font-size: 2vmax;
+  }
+}
+
 .offerWrapper {
   background: linear-gradient(-1.5deg, #292929 3%, rgba(0, 0, 0, 0) 3.1%);
-  padding: 5% 25% 5% 25%;
+  padding: 5% 25%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (1fr)[5];
-      grid-template-rows: repeat(5, 1fr);
   grid-gap: 5vmax;
+}
+
+@media screen and (orientation: portrait) {
+  .offerWrapper {
+    padding: 10% 15%;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .offerWrapper .offerTitle {
@@ -171,6 +272,14 @@ a {
   text-align: center;
   font-weight: 400;
   font-size: 1.7vmax;
+}
+
+@media screen and (orientation: portrait) {
+  .offerWrapper .offerTitle {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 3;
+  }
 }
 
 .offerWrapper .offerTitle a {
@@ -236,6 +345,14 @@ a {
   padding: 1vmax 15% 1vmax 15%;
 }
 
+@media screen and (orientation: portrait) {
+  .offerWrapper .offerMore {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 3;
+  }
+}
+
 .offerWrapper .offerMore h2 {
   font-weight: 400;
   font-size: 2vmax;
@@ -246,6 +363,7 @@ a {
   background-color: #9c88ff;
   width: 12vmax;
   height: 3vmax;
+  margin-top: 3vmax;
   border-radius: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -262,7 +380,16 @@ a {
           justify-content: center;
   font-size: 1vmax;
   color: white;
+  cursor: pointer;
   font-weight: 500;
+  -webkit-transition: 350ms ease-out;
+  transition: 350ms ease-out;
+}
+
+.offerWrapper .offerButton:hover {
+  border: 5px solid #9c88ff;
+  background-color: white;
+  color: #9c88ff;
 }
 
 .reviewWrapper {
