adding respo to landingpage

--- a/scss/style.css
+++ b/scss/style.css
@@ -69,6 +69,12 @@ a {
   }
 }
 
+@media screen and (max-width: 500px) {
+  .mainWrapper h1 {
+    padding: 0 5% 0 5%;
+  }
+}
+
 .mainWrapper h2 {
   width: 38%;
   color: white;
@@ -84,6 +90,12 @@ a {
     margin-top: -6%;
     font-size: 2vmax;
     line-height: 2.4vmax;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .mainWrapper h2 {
+    width: 90%;
   }
 }
 
@@ -109,6 +121,12 @@ a {
   .mainWrapper .mainWrapperButton {
     width: 40%;
     height: 5vmax;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .mainWrapper .mainWrapperButton {
+    width: 60%;
   }
 }
 
@@ -188,8 +206,8 @@ a {
 }
 
 .mainWrapper .goUp:hover {
-  width: 3.5vmax;
-  height: 3.5vmax;
+  width: 5.5vmax;
+  height: 5.5vmax;
 }
 
 .counterWrapper {
@@ -216,6 +234,12 @@ a {
         grid-template-rows: 1fr 1fr;
     grid-gap: 5vmax;
     padding: 4% 5% 15% 5%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .counterWrapper {
+    padding: 2% 5% 20% 5%;
   }
 }
 
@@ -259,9 +283,15 @@ a {
 
 @media screen and (orientation: portrait) {
   .offerWrapper {
-    padding: 10% 15%;
+    padding: 10% 10%;
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .offerWrapper {
+    padding: 15% 5%;
   }
 }
 
@@ -279,6 +309,13 @@ a {
     -ms-grid-column: 1;
         grid-column-start: 1;
     grid-column-end: 3;
+    font-size: 2.5vmax;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .offerWrapper .offerTitle {
+    font-size: 2.3vmax;
   }
 }
 
@@ -307,6 +344,13 @@ a {
   height: 5vmax;
 }
 
+@media screen and (orientation: portrait) {
+  .offerWrapper .offerBox .offerBoxIcon {
+    width: 7vmax;
+    height: 7vmax;
+  }
+}
+
 .offerWrapper .offerBox .offerBoxIcon img {
   width: 100%;
   height: 100%;
@@ -319,11 +363,23 @@ a {
   text-align: center;
 }
 
+@media screen and (orientation: portrait) {
+  .offerWrapper .offerBox .offerBoxTitle h3 {
+    font-size: 1.6vmax;
+  }
+}
+
 .offerWrapper .offerBox .offerBoxBar {
   width: 100%;
   height: 5px;
   border-radius: 10px;
   background-color: #9c88ff;
+}
+
+@media screen and (max-width: 500px) {
+  .offerWrapper .offerBox .offerBoxBar {
+    height: 3px;
+  }
 }
 
 .offerWrapper .offerMore {
@@ -359,6 +415,18 @@ a {
   text-align: center;
 }
 
+@media screen and (orientation: portrait) {
+  .offerWrapper .offerMore h2 {
+    font-size: 3vmax;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .offerWrapper .offerMore h2 {
+    font-size: 2.5vmax;
+  }
+}
+
 .offerWrapper .offerButton {
   background-color: #9c88ff;
   width: 12vmax;
@@ -384,6 +452,14 @@ a {
   font-weight: 500;
   -webkit-transition: 350ms ease-out;
   transition: 350ms ease-out;
+}
+
+@media screen and (orientation: portrait) {
+  .offerWrapper .offerButton {
+    width: 60%;
+    height: 5vmax;
+    font-size: 1.6vmax;
+  }
 }
 
 .offerWrapper .offerButton:hover {
@@ -412,11 +488,29 @@ a {
           justify-content: space-between;
 }
 
+@media screen and (orientation: portrait) {
+  .reviewWrapper {
+    padding: 3% 0 10% 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .reviewWrapper {
+    padding: 5% 0 20% 0;
+  }
+}
+
 .reviewWrapper h1 {
   font-weight: 600;
   font-size: 2.2vmax;
   color: white;
   margin-bottom: 7%;
+}
+
+@media screen and (orientation: portrait) {
+  .reviewWrapper h1 {
+    font-size: 3vmax;
+  }
 }
 
 .reviewWrapper .reviewContainer {
@@ -437,6 +531,13 @@ a {
   cursor: pointer;
 }
 
+@media screen and (orientation: portrait) {
+  .reviewWrapper .reviewContainer .arrow {
+    width: 4vmax;
+    height: 4vmax;
+  }
+}
+
 .reviewWrapper .reviewContainer .arrow img {
   width: 100%;
   height: 100%;
@@ -453,6 +554,12 @@ a {
   overflow-x: hidden;
 }
 
+@media screen and (max-width: 500px) {
+  .reviewWrapper .reviewContainer .reviewSection {
+    width: 70%;
+  }
+}
+
 .reviewWrapper .reviewContainer .reviewSection .reviewContent {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -465,10 +572,32 @@ a {
           justify-content: flex-start;
 }
 
+.reviewWrapper .reviewContainer .reviewSection .reviewContent .rm {
+  display: block;
+}
+
+@media screen and (orientation: portrait) {
+  .reviewWrapper .reviewContainer .reviewSection .reviewContent .rm {
+    display: none;
+  }
+}
+
 .reviewWrapper .reviewContainer .reviewSection .reviewContent .reviewBox {
   min-width: 50%;
   padding: 2% 5% 5% 5%;
   text-align: center;
+}
+
+@media screen and (orientation: portrait) {
+  .reviewWrapper .reviewContainer .reviewSection .reviewContent .reviewBox {
+    min-width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .reviewWrapper .reviewContainer .reviewSection .reviewContent .reviewBox {
+    padding: 2% 5% 10% 5%;
+  }
 }
 
 .reviewWrapper .reviewContainer .reviewSection .reviewContent .reviewBox p {
@@ -478,10 +607,22 @@ a {
   margin-bottom: 2vmax;
 }
 
+@media screen and (orientation: portrait) {
+  .reviewWrapper .reviewContainer .reviewSection .reviewContent .reviewBox p {
+    font-size: 1.5vmax;
+  }
+}
+
 .reviewWrapper .reviewContainer .reviewSection .reviewContent .reviewBox h2 {
   font-size: 1.6vmax;
   color: #9c88ff;
   font-weight: 400;
+}
+
+@media screen and (orientation: portrait) {
+  .reviewWrapper .reviewContainer .reviewSection .reviewContent .reviewBox h2 {
+    font-size: 2.5vmax;
+  }
 }
 
 .reviewWrapper .reviewPos1 {
@@ -507,7 +648,7 @@ a {
 
 .reviewWrapper .reviewDots {
   width: 4%;
-  height: 2vmax;
+  height: 3vmax;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -518,6 +659,13 @@ a {
       justify-content: space-around;
 }
 
+@media screen and (orientation: portrait) {
+  .reviewWrapper .reviewDots {
+    font-size: 2.5vmax;
+    width: 10%;
+  }
+}
+
 .reviewWrapper .reviewDots .dot1,
 .reviewWrapper .reviewDots .dot2,
 .reviewWrapper .reviewDots .dot3 {
@@ -525,6 +673,15 @@ a {
   height: 0.8vmax;
   border-radius: 50%;
   background-color: white;
+}
+
+@media screen and (orientation: portrait) {
+  .reviewWrapper .reviewDots .dot1,
+  .reviewWrapper .reviewDots .dot2,
+  .reviewWrapper .reviewDots .dot3 {
+    width: 1.2vmax;
+    height: 1.2vmax;
+  }
 }
 
 .reviewWrapper .reviewDots .active {
@@ -539,7 +696,28 @@ a {
       grid-template-columns: repeat(4, 1fr);
   -ms-grid-rows: (1fr)[3];
       grid-template-rows: repeat(3, 1fr);
-  padding: 5% 10% 5% 10%;
+  padding: 5% 10%;
+}
+
+@media screen and (orientation: portrait) {
+  .contactWrapper {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .contactWrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: (1fr)[6];
+        grid-template-rows: repeat(6, 1fr);
+    grid-row-gap: 2vmax;
+    padding: 10% 2%;
+  }
 }
 
 .contactWrapper h2 {
@@ -547,8 +725,32 @@ a {
   font-weight: 400;
 }
 
+@media screen and (orientation: portrait) {
+  .contactWrapper h2 {
+    font-size: 2.2vmax;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .contactWrapper h2 {
+    font-size: 2.6vmax;
+  }
+}
+
 .contactWrapper p {
   font-size: 1vmax;
+}
+
+@media screen and (orientation: portrait) {
+  .contactWrapper p {
+    font-size: 1.6vmax;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .contactWrapper p {
+    font-size: 2vmax;
+  }
 }
 
 .contactWrapper .contactTitle {
@@ -560,6 +762,20 @@ a {
   grid-row-end: 2;
   font-size: 2.8vmax;
   font-weight: 500;
+}
+
+@media screen and (orientation: portrait) {
+  .contactWrapper .contactTitle {
+    font-size: 3.5vmax;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .contactWrapper .contactTitle {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+  }
 }
 
 .contactWrapper .contactTitle a {
@@ -586,6 +802,17 @@ a {
   padding: 1vmax;
 }
 
+@media screen and (max-width: 500px) {
+  .contactWrapper .contactAddres2 {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    -ms-grid-row: 3;
+        grid-row-start: 3;
+    grid-row-end: 4;
+  }
+}
+
 .contactWrapper .contactPhone {
   -ms-grid-column: 1;
       grid-column-start: 1;
@@ -596,6 +823,17 @@ a {
   padding: 2vmax 1vmax;
 }
 
+@media screen and (max-width: 500px) {
+  .contactWrapper .contactPhone {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    -ms-grid-row: 4;
+        grid-row-start: 4;
+    grid-row-end: 5;
+  }
+}
+
 .contactWrapper .contactEmail {
   -ms-grid-column: 2;
       grid-column-start: 2;
@@ -604,6 +842,17 @@ a {
       grid-row-start: 3;
   grid-row-end: 4;
   padding: 2vmax 1vmax;
+}
+
+@media screen and (max-width: 500px) {
+  .contactWrapper .contactEmail {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    -ms-grid-row: 5;
+        grid-row-start: 5;
+    grid-row-end: 6;
+  }
 }
 
 .contactWrapper .contactSocials {
@@ -627,6 +876,17 @@ a {
           align-items: center;
 }
 
+@media screen and (orientation: portrait) {
+  .contactWrapper .contactSocials {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    -ms-grid-row: 6;
+        grid-row-start: 6;
+    grid-row-end: 7;
+  }
+}
+
 .contactWrapper .contactSocials .socialsContainer {
   width: 60%;
   display: -webkit-box;
@@ -639,12 +899,24 @@ a {
           align-items: center;
 }
 
+@media screen and (orientation: portrait) {
+  .contactWrapper .contactSocials .socialsContainer {
+    width: 40%;
+  }
+}
+
 .contactWrapper .contactSocials .socialsContainer .social {
   width: 2.5vmax;
   height: 2.5vmax;
-  background-color: whitesmoke;
   background-position: center;
   background-size: cover;
+}
+
+@media screen and (orientation: portrait) {
+  .contactWrapper .contactSocials .socialsContainer .social {
+    width: 3.5vmax;
+    height: 3.5vmax;
+  }
 }
 
 .contactWrapper .contactSocials .socialsContainer .Facebook {
