--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,6 +49,9 @@ a{
             font-size: 6.5vmax; 
             line-height: 7vmax;
         }
+        @media screen and (max-width: 500px){
+            padding: 0 5% 0 5%; 
+        }
     }
     h2{
         width: 38%;
@@ -62,6 +65,9 @@ a{
             margin-top: -6%;
             font-size: 2vmax; 
             line-height: 2.4vmax;
+        }
+        @media screen and (max-width: 500px){
+            width: 90%; 
         }
     }
     .mainWrapperButton{
@@ -77,6 +83,9 @@ a{
         @media screen and (orientation: portrait){
             width: 40%;
             height: 5vmax;
+        }
+        @media screen and (max-width: 500px){
+            width: 60%; 
         }
         h3 {
             font-weight: 500;
@@ -134,8 +143,8 @@ a{
         }
     }
     .goUp:hover{
-        width: 3.5vmax;
-        height: 3.5vmax;
+        width: 5.5vmax;
+        height: 5.5vmax;
     }
 }
 .counterWrapper{
@@ -151,6 +160,9 @@ a{
         grid-template-rows: 1fr 1fr;
         grid-gap: 5vmax;
         padding: 4% 5% 15% 5%;
+    }
+    @media screen and (max-width: 500px){
+        padding: 2% 5% 20% 5%;
     }
     .counterBox{
         text-align: center;
@@ -179,9 +191,12 @@ a{
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 5vmax;
     @media screen and (orientation: portrait){
-        padding: 10% 15%;
+        padding: 10% 10%;
         grid-template-columns: repeat(2, 1fr); 
     }  
+    @media screen and (max-width: 500px){
+        padding: 15% 5%;
+    }
     .offerTitle{
         grid-column-start: 1;
         grid-column-end: 4;
@@ -191,7 +206,11 @@ a{
         @media screen and (orientation: portrait){
             grid-column-start: 1;
             grid-column-end:3;
+            font-size: 2.5vmax;
         }  
+        @media screen and (max-width: 500px){
+            font-size: 2.3vmax;
+        }
         a{
             font-weight: bold;
         }
@@ -204,6 +223,10 @@ a{
         .offerBoxIcon{
             width: 5vmax;
             height: 5vmax;
+            @media screen and (orientation: portrait){
+                width: 7vmax;
+                height: 7vmax;
+            }  
             img{
                 width: 100%;
                 height: 100%;
@@ -214,12 +237,18 @@ a{
             font-size: 1.1vmax;
             padding: 3vmax 5% 2vmax 5%;
             text-align: center;
+            @media screen and (orientation: portrait){
+                font-size: 1.6vmax;
+            }  
         }
         .offerBoxBar{
             width: 100%;
             height: 5px;
             border-radius: 10px;
             background-color: $maincolor;
+            @media screen and (max-width: 500px){
+                height: 3px;
+            }
         }
     }
     .offerMore{
@@ -230,8 +259,7 @@ a{
         align-items: center;
         justify-content: space-around;
         padding: 1vmax 15% 1vmax 15%;
-        @media screen and (orientation: portrait){
-            
+        @media screen and (orientation: portrait){    
             grid-column-start: 1;
             grid-column-end:3;
         } 
@@ -239,6 +267,12 @@ a{
             font-weight: 400;
             font-size: 2vmax;
             text-align: center;
+            @media screen and (orientation: portrait){
+                font-size: 3vmax;
+            } 
+            @media screen and (max-width: 500px){
+                font-size: 2.5vmax;
+            }
         }
     }
     .offerButton{
@@ -256,6 +290,11 @@ a{
         cursor: pointer;
         font-weight: 500;
         transition: 350ms ease-out;
+        @media screen and (orientation: portrait){
+            width: 60%;
+            height: 5vmax;
+            font-size: 1.6vmax;
+        } 
     }
     .offerButton:hover{
         border: 5px solid $maincolor;
@@ -272,26 +311,37 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    @media screen and (orientation: portrait){
+        padding: 3% 0 10% 0;
+    } 
+    @media screen and (max-width: 500px){
+        padding: 5% 0 20% 0;
+    }
     h1{
         font-weight: 600;
         font-size: 2.2vmax;
         color: white;
         margin-bottom: 7%;
+        @media screen and (orientation: portrait){
+            font-size: 3vmax;
+        } 
     }
     .reviewContainer{
         width: 100%;
         display: flex;
         align-items: center;
         justify-content: space-around;
-        
         .arrow{
             width: 3vmax;
             height: 3vmax;
             cursor: pointer;
+            @media screen and (orientation: portrait){
+                width: 4vmax;
+                height: 4vmax;
+            } 
             img{
                 width: 100%;
-                height: 100%;
-                
+                height: 100%;   
             }
         }
         .a1{
@@ -301,24 +351,45 @@ a{
         .reviewSection{
             width: 60%;
             overflow-x: hidden;
+            @media screen and (max-width: 500px){
+                width: 70%;
+            }
             .reviewContent{
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
+                .rm{
+                    display: block;
+                    @media screen and (orientation: portrait){
+                        display: none;
+                    } 
+                }
                 .reviewBox{
                     min-width: 50%;
                     padding: 2% 5% 5% 5%;
                     text-align: center;
+                    @media screen and (orientation: portrait){
+                        min-width: 100%;
+                    } 
+                    @media screen and (max-width: 500px){
+                        padding: 2% 5% 10% 5%;
+                    }
                     p{
                         font-size: 1vmax;
                         color: white;
                         font-weight: 400;
                         margin-bottom: 2vmax;
+                        @media screen and (orientation: portrait){
+                            font-size: 1.5vmax;
+                        } 
                     }
                     h2{
                         font-size: 1.6vmax;
                         color: $maincolor;
                         font-weight: 400;
+                        @media screen and (orientation: portrait){
+                            font-size: 2.5vmax;
+                        } 
                     }
                 }
             }
@@ -338,17 +409,25 @@ a{
     }
     .reviewDots{
         width: 4%;
-        height: 2vmax;
+        height: 3vmax;
         display: flex;
         align-items: center;
         justify-content: space-around;
+        @media screen and (orientation: portrait){
+            font-size: 2.5vmax;
+            width: 10%;
+        } 
         .dot1,
         .dot2,
-        .dot3{
+        .dot3 {
             width: 0.8vmax;
             height: 0.8vmax;
             border-radius: 50%;
-            background-color: white;   
+            background-color: white; 
+            @media screen and (orientation: portrait){
+                width: 1.2vmax;
+            height: 1.2vmax;
+            }   
         }
         .active{
             background-color: #9c88ff;
@@ -361,13 +440,36 @@ a{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    padding: 5% 10% 5% 10%;
+    padding: 5% 10%;
+    @media screen and (orientation: portrait){
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        text-align: center;;
+    } 
+    @media screen and (max-width: 500px){
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);
+        grid-row-gap: 2vmax;
+        padding: 10% 2%;
+    }
     h2{
         font-size: 1.5vmax;
         font-weight: 400;
+        @media screen and (orientation: portrait){
+            font-size: 2.2vmax;
+        } 
+        @media screen and (max-width: 500px){
+            font-size: 2.6vmax;
+        }
     }
     p {
         font-size: 1vmax;
+        @media screen and (orientation: portrait){
+            font-size: 1.6vmax;
+        } 
+        @media screen and (max-width: 500px){
+            font-size: 2vmax;
+        }
     }
     .contactTitle{
         grid-column-start: 1;
@@ -376,6 +478,13 @@ a{
         grid-row-end: 2;
         font-size: 2.8vmax;
         font-weight: 500;
+        @media screen and (orientation: portrait){
+            font-size: 3.5vmax;
+        } 
+        @media screen and (max-width: 500px){
+            grid-column-start: 1;
+            grid-column-end: 2;
+        }
         a{
             font-weight: 600;
         }
@@ -394,6 +503,12 @@ a{
         grid-row-start: 2;
         grid-row-end: 3;
         padding: 1vmax;
+        @media screen and (max-width: 500px){
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 3;
+            grid-row-end: 4;
+        }
     }
     .contactPhone{
         grid-column-start: 1;
@@ -401,6 +516,12 @@ a{
         grid-row-start: 3;
         grid-row-end: 4;
         padding: 2vmax 1vmax;
+        @media screen and (max-width: 500px){
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 4;
+            grid-row-end: 5;
+        }
     }
     .contactEmail{
         grid-column-start: 2;
@@ -408,6 +529,12 @@ a{
         grid-row-start:3;
         grid-row-end: 4;
         padding: 2vmax 1vmax;
+        @media screen and (max-width: 500px){
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 5;
+            grid-row-end: 6;
+        }
     }
     .contactSocials{
         grid-column-start: 4;
@@ -416,19 +543,31 @@ a{
         grid-row-end: 4;
         display: flex;
         flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
+        justify-content: space-around;
+        align-items: center;
+        @media screen and (orientation: portrait){
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 6;
+            grid-row-end: 7;
+        } 
         .socialsContainer{
             width: 60%;
             display: flex;
             justify-content: space-around;
             align-items: center;
+            @media screen and (orientation: portrait){
+                width: 40%;
+            } 
             .social{
                 width: 2.5vmax;
                 height: 2.5vmax;
-                background-color: whitesmoke;
                 background-position: center;
                 background-size: cover;
+                @media screen and (orientation: portrait){
+                    width: 3.5vmax;
+                    height: 3.5vmax;
+                } 
             }
             .Facebook{
                 background-image: url(../assets/icons/facebook.png);
