--- a/scss/gallery.css
+++ b/scss/gallery.css
@@ -13,6 +13,13 @@
   padding: 2vmax 3vmax;
 }
 
+@media screen and (orientation: portrait) {
+  .galleryContainer .callBack {
+    width: 40%;
+    padding: 3vmax 3vmax;
+  }
+}
+
 .galleryContainer .callBack a {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -29,12 +36,26 @@
 
 .galleryContainer .callBack h3 {
   padding-left: 5%;
+  color: #9c88ff;
+  font-size: 1.3vmax;
+}
+
+@media screen and (orientation: portrait) {
+  .galleryContainer .callBack h3 {
+    font-size: 2vmax;
+  }
 }
 
 .galleryContainer .callBack img {
   width: 1.6vmax;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+}
+
+@media screen and (orientation: portrait) {
+  .galleryContainer .callBack img {
+    width: 2vmax;
+  }
 }
 
 .galleryContainer h1 {
@@ -49,7 +70,7 @@
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-gap: 1vmax;
   width: 70%;
-  padding-top: 5%;
+  padding: 5% 2%;
   margin: auto;
 }
 
@@ -99,5 +120,11 @@
 .galleryContainer #popup #selectedImage {
   max-height: 100%;
   max-width: 100%;
+}
+
+.galleryContainer .footer {
+  width: 100%;
+  height: 4vmax;
+  background-color: #9c88ff;
 }
 /*# sourceMappingURL=gallery.css.map */
