--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -1,45 +1,134 @@
-
-.topBar{
+$maincolor: #9c88ff;
+header{
+    width: 100%;
+    place-items: center;
+    position: fixed;
+    padding: 3% 0;
+    top: 0;
+    left: 0;
+    z-index: 999;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: $maincolor;
+    @media  screen and (orientation: landscape) {
+        padding: 1vmax 0;
+        background-color: unset;
+        position: absolute;
+    }
     .logo{
-        width: 15%;
-        height: 70%;
-        background-image: url(../assets/yamaha.png);
-        background-position: center;
-        background-size: cover;
-    } 
-    nav{
-        z-index: 9999;
-        .nav-btn i{
-            width: 10px;
-            height: 2px;
+        width: 55%;
+        height: 7vmax;
+        @media  screen and (min-width: 740px) {
+            width: 40%;
         }
-        .hidden {
-            display: none;
-          }
+        @media  screen and (orientation: landscape) {
+            height: 4vmax;
+            width: 20%;
+        }
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    nav{
+        position: absolute;
+        text-align: left;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 35vh;
+        background-color: white;
+        transform: scale(1,0);
+        transform-origin: top;
+        transition: transform 300ms ease-in-out;
+        overflow-y: hidden;
+        @media  screen and (orientation: landscape) {
+            position: relative;
+            transform: scale(1,1);
+            height: unset;
+            width: 30%;
+            background-color: unset;
+        }
         ul{
+            margin: 0;
+            padding: 0;
+            list-style: none;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: space-around;
-            list-style: none;
-            width: 100%;
+            height: 100%;
+            @media  screen and (orientation: landscape) {
+                flex-direction: row;
+                justify-content: space-between;
+            }
             li{
-                margin: 0 1vmax 0 1vmax;
+                margin-left: 4vmax;
+                @media  screen and (orientation: landscape) {
+                    margin: 0;
+                }
                 a{
-                    outline: none;
-                    color: white;
-                    text-transform: uppercase;
+                    color: black;
                     text-decoration: none;
-                    font-size: 1.4vmax;
-                    letter-spacing: 0.1vmax;
-                    font-weight: 400;
+                    font-size: 2vmax;
+                    font-weight: 500;
+                    text-transform: uppercase;
+                    opacity: 0;
+                    transition: opacity 150ms ease-in-out;
+                    @media  screen and (orientation: landscape) {
+                        opacity: 1;
+                        font-size: 1.4vmax;
+                        color: white;
+                        text-transform: unset;
+                        font-weight: 400;
+                    }
+                    &:hover{
+                        color: $maincolor;
+                    }  
+                }
+                &:last-child a{
+                    color: $maincolor;
                 }
             }
         }
     }
-    nav ul li:last-child a {
-        color: #9c88ff;
+    .nav-toggle{
+        display: none;
+    }
+    .nav-toggle:checked ~ nav{
+        transform: scale(1,1);
+    }
+    .nav-toggle:checked ~ nav a{
+        opacity: 1;
+        transition: opacity 250ms ease-in-out 250ms;
+    }
+    .nav-toggle:checked ~ header{
+        background-color: $maincolor;
+    }
+    .nav-toggle-label span,
+    .nav-toggle-label span::before,
+    .nav-toggle-label span::after {
+        display: block;
+        background-color: white;
+        height: 2px;
+        width: 25px;
+        border-radius: 2px;
+        position: relative;
+        @media  screen and (orientation: landscape) {
+            display: none;
+        }
+    }
+    .nav-toggle-label span::before,
+    .nav-toggle-label span::after{
+        content: '';
+        position: absolute;
+    }
+    .nav-toggle-label span::before {
+        bottom: 8px;
+    }
+    .nav-toggle-label span::after {
+       top: 8px;
     }
 }
+
