--- a/scss/gallery.scss
+++ b/scss/gallery.scss
@@ -1,3 +1,4 @@
+$maincolor: #9c88ff;
 *{
     margin: 0;
     padding: 0;
@@ -9,19 +10,32 @@
     .callBack{
         width: 15%;
         padding: 2vmax 3vmax;
+        @media screen and (orientation: portrait){
+            width: 40%;
+            padding: 3vmax 3vmax;
+        }
         a{
             display: flex;
-        align-items: center;
-        justify-content: center;
-        text-decoration: none;
-        color: black;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            color: black;
         }
         h3{
             padding-left: 5%;
+            color: $maincolor;
+            font-size: 1.3vmax;
+            @media screen and (orientation: portrait){
+                font-size: 2vmax;
+                
+            }
         }
         img{
             width: 1.6vmax;
             transform: rotate(180deg);
+            @media screen and (orientation: portrait){
+                width: 2vmax;
+            }
         }
     }
     h1{
@@ -34,7 +48,7 @@
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         grid-gap: 1vmax;
         width: 70%;
-        padding-top: 5%;
+        padding: 5% 2%;
         margin: auto;
         .galleryImg{
             max-width: 100%;
@@ -67,5 +81,10 @@
             max-height: 100%;
             max-width: 100%;
         }
+    }
+    .footer{
+        width: 100%;
+        height: 4vmax;
+        background-color: $maincolor;
     }
 }
