--- a/scss/style.css
+++ b/scss/style.css
@@ -95,7 +95,7 @@ a {
 
 @media screen and (max-width: 500px) {
   .mainWrapper h2 {
-    width: 90%;
+    width: 80%;
   }
 }
 
@@ -126,7 +126,7 @@ a {
 
 @media screen and (max-width: 500px) {
   .mainWrapper .mainWrapperButton {
-    width: 60%;
+    width: 50%;
   }
 }
 
@@ -206,8 +206,15 @@ a {
 }
 
 .mainWrapper .goUp:hover {
-  width: 5.5vmax;
-  height: 5.5vmax;
+  width: 3.5vmax;
+  height: 3.5vmax;
+}
+
+@media screen and (orientation: portrait) {
+  .mainWrapper .goUp:hover {
+    width: 5.5vmax;
+    height: 5.5vmax;
+  }
 }
 
 .counterWrapper {
