--- a/scss/gallery.scss
+++ b/scss/gallery.scss
@@ -50,6 +50,9 @@ $maincolor: #9c88ff;
         width: 70%;
         padding: 5% 2%;
         margin: auto;
+        @media screen and (orientation: portrait){
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        }
         .galleryImg{
             max-width: 100%;
             border-radius: 10px;
