--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -16,19 +16,25 @@ header{
         background-color: unset;
         position: absolute;
     }
+    .nav-landscape{
+        display: block;
+        @media  screen and (orientation: portrait) {
+            display: none;
+        }
+    }
     .logo{
-        width: 55%;
+        width: 50%;
         height: 7vmax;
         @media  screen and (min-width: 740px) {
             width: 40%;
         }
         @media  screen and (orientation: landscape) {
-            height: 4vmax;
-            width: 20%;
+            height: 3.5vmax;
+            width: 15%;
         }
         img{
             width: 100%;
-            height: 100%;
+            height: 100%; 
         }
     }
     nav{
@@ -47,7 +53,7 @@ header{
             position: relative;
             transform: scale(1,1);
             height: unset;
-            width: 30%;
+            width: 20%;
             background-color: unset;
         }
         ul{
